--- a/Primer_Proyecto/package.json
+++ b/Primer_Proyecto/package.json
@@ -19,16 +19,27 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
+    "@awesome-cordova-plugins/http": "^6.2.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@cordobo/qrcode": "^1.5.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
+    "angularx-qrcode": "^14.0.0",
+    "cordova-plugin-advanced-http": "^3.3.1",
+    "ionic-native-qrcode": "^0.0.1",
     "ionicons": "^6.0.3",
+    "jsqr": "^1.4.0",
+    "localforage": "^1.10.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "qrcode": "^1.5.1",
     "rxjs": "~6.6.0",
+    "storage": "^0.2.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
