--- a/Primer_Proyecto/package.json
+++ b/Primer_Proyecto/package.json
@@ -21,8 +21,9 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
     "@awesome-cordova-plugins/http": "^6.2.0",
+    "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
+    "@capacitor/core": "^4.1.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
@@ -53,7 +54,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "4.1.0",
+    "@capacitor/cli": "^4.1.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.13",
     "@types/jasmine": "~3.6.0",
