--- a/Primer_Proyecto/package.json
+++ b/Primer_Proyecto/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Primer_Proyecto",
+  "name": "proiectowe",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -20,27 +20,25 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
-    "@awesome-cordova-plugins/http": "^6.2.0",
-    "@capacitor/android": "^4.6.1",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "^4.1.0",
+    "@capacitor-community/barcode-scanner": "^3.0.1",
+    "@capacitor/android": "^4.4.0",
+    "@capacitor/app": "4.1.0",
+    "@capacitor/camera": "^4.1.3",
+    "@capacitor/core": "^4.6.1",
     "@capacitor/haptics": "4.0.1",
+    "@capacitor/ios": "4.4.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@cordobo/qrcode": "^1.5.0",
     "@ionic/angular": "^6.1.9",
-    "@ionic/storage": "^3.0.6",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
     "angularx-qrcode": "^14.0.0",
-    "cordova-plugin-advanced-http": "^3.3.1",
-    "ionic-native-qrcode": "^0.0.1",
     "ionicons": "^6.0.3",
     "jsqr": "^1.4.0",
-    "localforage": "^1.10.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "ngx-scanner-qrcode": "^1.0.26",
     "qrcode": "^1.5.1",
     "rxjs": "~6.6.0",
-    "storage": "^0.2.0",
+    "safe-pipe": "^2.0.5-0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -50,13 +48,13 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "14.2.2",
+    "@angular/cli": "14.2.10",
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "^4.1.0",
+    "@capacitor/cli": "^4.6.1",
     "@ionic/angular-toolkit": "^6.0.0",
-    "@ionic/lab": "3.2.13",
+    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
